Monda night work

--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -1,24 +1,28 @@
 <h1>Todo List</h1>
-              <div class="row">
-                <div class="col-xs-6 col-xs-offset-3">
-                  <div class="input-group">
-                      <span class="input-group-btn">
+<div class="row">
+    <div clas s="col-xs-6 col-xs-offset-3">
+        <div class="input-group">
+            <span class="input-group-btn">
                       <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
                     </span>
-                    <input type="text" placeholder="Search for:" class="form-control" ng-model="searchText">
-                  </div>
-                </div>
-              </div>
-            <!-- this is a forEach loop - we want to loop over each one of the "thingy"'s and the result will be "items" it is looping
+            <input type="text" placeholder="Search for:" class="form-control" ng-model="searchText">
+        </div>
+    </div>
+</div>
+<!-- this is a forEach loop - we want to loop over each one of the "thingy"'s and the result will be "items" it is looping
             over the array of showListView -->
-              <div ng-repeat="thingy in items | filter: searchText">
-                  <div class="panel panel-default">
-                    <div class="panel-body"> 
-                      <div class="col-xs-1"><input type="checkbox" name=""/></div>
-                      <div class="col-xs-7">{{thingy.task}}</div>
-                      <div class="col-xs-2">{{thingy.dueDate}}</div>
-                      <div class="col-xs-1">{{thingy.assignedTo}}</div>
-                      <div class="col-xs-1"><button class="btn btn-danger">X</button></div>
-                      </div>
-                </div>
-                </div>
+<div ng-repeat="thingy in items | filter: searchText">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="col-xs-1">
+                <input type="checkbox" name="" />
+            </div>
+            <div class="col-xs-7">{{thingy.task}}</div>
+            <div class="col-xs-2">{{thingy.dueDate}}</div>
+            <div class="col-xs-1">{{thingy.assignedTo}}</div>
+            <div class="col-xs-1">
+                <button class="btn btn-danger">X</button>
+            </div>
+        </div>
+    </div>
+</div>
