--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -9,19 +9,16 @@
         </div>
     </div>
 </div>
-<!-- this is a forEach loop - we want to loop over each one of the "thingy"'s and the result will be "items" it is looping
+<!-- this is a forEach loop - we want to loop over each one of the item"'s and the result will be "items" it is looping
             over the array of showListView -->
-<div ng-repeat="thingy in items | filter: searchText">
+<div ng-repeat="item in items | filter: searchText">
     <div class="panel panel-default">
         <div class="panel-body">
-            <div class="col-xs-1">
-                <input type="checkbox" name="" />
-            </div>
-            <div class="col-xs-7">{{thingy.task}}</div>
-            <div class="col-xs-2">{{thingy.dueDate}}</div>
-            <div class="col-xs-1">{{thingy.assignedTo}}</div>
-            <div class="col-xs-1">
-                <button class="btn btn-danger">X</button>
+            <div class="col-xs-1"> <input type="checkbox" name="" /> </div>
+            <div class="col-xs-7"><a ng-href="#/items/{{item.id}}">{{item.task}}</a></div>
+            <div class="col-xs-2">{{item.dueDate}}</div>
+            <div class="col-xs-1">{{item.assignedTo}}</div>
+            <div class="col-xs-1"><button class="btn btn-danger" ng-click="itemDelete(item.id)"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
             </div>
         </div>
     </div>
