--- a/partials/item-list.html
+++ b/partials/item-list.html
@@ -1,14 +1,24 @@
 <h1>To do List</h1>
 <div class="row">
     <div clas s="col-xs-6 col-xs-offset-3">
-        <div class="input-group">
+        <div class="input-group search-bar-spacing">
             <span class="input-group-btn">
-                      <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
-                    </span>
-            <input type="text" placeholder="Search for:" class="form-control" ng-model="searchText">
-        </div>
+              <button class="btn btn-default"><i class="fa fa-search" aria-hidden="true"></i></button>
+          </span>
+          <input type="text" placeholder="Search for:" class="form-control" ng-model="searchText">
+      </div>
+  </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="col-xs-1"> </div>
+        <div class="col-xs-7">Task</div>
+        <div class="col-xs-2">Due Date</div>
+        <div class="col-xs-1">Assigned To</div>
+        <div class="col-xs-1"></div>
     </div>
 </div>
+
 <!-- this is a forEach loop - we want to loop over each one of the items and the result will be "items" it is looping
             over the array of showListView-->
 <div ng-repeat="thingy in items | filter: searchText">
