--- a/partials/item-new.html
+++ b/partials/item-new.html
@@ -1,28 +1,28 @@
 <h1>New Todo</h1>
-  <form>
-    <div class="form-group">
-        <label>Task Description</label>
-        <input type="text"class="form-control" placeholder="Some important task" ng-model="newTask.task"/>
-      </div>
-        <div class="form-group">
-        <label>Due Date</label>
-        <input type="text"class="form-control" placeholder="Due Date" ng-model="newTask.dueDate"/>
-                </div>
-                <div class="form-group">
-                  <label>Assigned To</label>
-                  <input type="text"class="form-control" placeholder="Assigned To" ng-model="newTask.assignedTo"/>
-                </div>
-                <div class="form-group">
-                  <label>Location</label>
-                  <input type="text"class="form-control" placeholder="Location" ng-model="newTask.location"/>
-                </div>
-                <div class="form-group">
-                  <label>Urgency</label>
-                  <input type="text"class="form-control" placeholder="Urgency" ng-model="newTask.urgency"/>
-                </div>
-                <div class="form-group">
-                  <label>Equipment Necessary</label>
-                  <input type="text"class="form-control" placeholder="Equipment" ng-model="newTask.dependencies"/>
-                </div>
-                <button class="btn btn-defualt" ng-click="addNewItem()">Submit</button>
-              </form>
+<form>
+  <div class="form-group">
+    <label>Task Description</label>
+    <input type="text"class="form-control" placeholder="Some important task" ng-model="newTask.task"/>
+  </div>
+  <div class="form-group">
+    <label>Due Date</label>
+    <input type="text"class="form-control" placeholder="Due Date" ng-model="newTask.dueDate"/>
+  </div>
+  <div class="form-group">
+    <label>Assigned To</label>
+    <input type="text"class="form-control" placeholder="Assigned To" ng-model="newTask.assignedTo"/>
+  </div>
+  <div class="form-group">
+    <label>Location</label>
+    <input type="text"class="form-control" placeholder="Location" ng-model="newTask.location"/>
+  </div>
+  <div class="form-group">
+    <label>Urgency</label>
+    <input type="text"class="form-control" placeholder="Urgency" ng-model="newTask.urgency"/>
+  </div>
+  <div class="form-group">
+    <label>Equipment Necessary</label>
+    <input type="text"class="form-control" placeholder="Equipment" ng-model="newTask.dependencies"/>
+  </div>
+  <div class="text-center"><button class="btn btn-defualt" ng-click="addNewItem()">Submit</button></div>
+</form>
