--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,11 @@ h1{
 .main-container {
   border: 2px dashed $red;
 }
+
+.search-bar-spacing {
+  margin-bottom: 20px;
+}
+
+.new-item-button-container {
+  
+}
