--- a/partials/item-new.html
+++ b/partials/item-new.html
@@ -1,4 +1,4 @@
-<h1>New Todo</h1>
+  <h1>{{title}}</h1>
 <form>
   <div class="form-group">
     <label>Task Description</label>
@@ -24,5 +24,5 @@
     <label>Equipment Necessary</label>
     <input type="text"class="form-control" placeholder="Equipment" ng-model="newTask.dependencies"/>
   </div>
-  <div class="text-center"><button class="btn btn-defualt" ng-click="addNewItem()">Submit</button></div>
+  <div class="text-center"><button class="btn btn-defualt" ng-click="addNewItem()">{{submitButtonText}}</button></div>
 </form>
