--- a/partials/nav-bar.html
+++ b/partials/nav-bar.html
@@ -1,5 +1,5 @@
 <!-- Bootstrap here:  -->
-<nav class="navbar navbar-default" ng-controller="NavCtrl">
+<nav class="navbar navbar-default" ng-controller="LoginCtrl">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -16,6 +16,7 @@
     <!-- We changed this by taking everything out of the navCtrl and placing them in the ng-href article-->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+        <li><a ng-href="#/login">Login</a></li>
         <li><a ng-href="#/items/new">New Item</a></li>
         <li><a ng-href="#/items/list">All Items</a></li>
         <li><a ng-href="#/logout">Logout</a></li>
